[project]
name = "cangling-ai"
version = "0.1.7"
description = "cangling ai library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "zhangjianshe", email = "zhangjianshe@gmail.com"}]
dependencies = [
    "kafka-python==2.0.2",
    "loguru >= 0.7.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cangling", "cangling.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

