[project]
name = "cangling-ai"
dynamic = ["version"]
description = "cangling ai library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "zhangjianshe", email = "zhangjianshe@gmail.com"}]
dependencies = [
    "kafka-python-ng>=2.2.2",
    "loguru >= 0.7.3",
]
[tool.setuptools.dynamic]
version = {attr = "cangling.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cangling", "cangling.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

